--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -6,47 +7,56 @@
 
 body {
   margin-top: 80px;
+  font-family: 'Press Start 2P', sans-serif;
+  background-color: black;
+  color: #ddd;
 }
 
 main {
   margin-top: 20px;
   display: flex;
-  width: 50%;
-  margin-left: 25%;
+  width: 70%;
+  margin-left: 15%;
   font-size: large;
-  font-family: 'Qahiri', sans-serif;
+  border: 3px solid #ddd;
+  padding: 40px;
 }
 
 .lest-side {
-  width: 50%;
+  width: 60%;
   text-align: left;
 }
 
 .right-side {
-  width: 50%;
+  width: 40%;
 }
 
 .list {
-  border: 2px solid black;
-  width: 75%;
+  border: 2px solid #ddd;
+  width: 85%;
   margin-right: 40px;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 90%;
+  height: 15rem;
+  border: 3px solid #ddd;
+  padding: 50px;
 }
 
 input {
   margin-bottom: 10px;
-  height: 1.5rem;
-  border: 2px solid black;
+  height: 3rem;
+  border: 3px solid rgb(248, 244, 244);
+  border-radius: 3px;
+  background-color: rgba(53, 49, 49, 0.712);
+  color: #ddd;
 }
 
 .left-title {
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
   margin-bottom: 5px;
 }
 
@@ -54,27 +64,37 @@ input {
   padding-left: 1rem;
   padding-bottom: 10px;
   font-size: 28px;
-  font-family: 'Times New Roman', Times, serif;
 }
 
 .btn-refresh {
-  width: 7rem;
+  width: 5rem;
+  height: 3rem;
   font-size: 18px;
   margin-bottom: 10px;
+  border: 3px solid #ddd;
+  background-color: rgba(53, 49, 49, 0.712);
+  color: #ddd;
+  border-radius: 15px;
+}
+
+.btn-refresh:hover {
+  background-color: #ddd;
+  color: #000;
 }
 
 .main-title {
-  margin-left: 25%;
+  margin-left: 15%;
 }
 
 #scores {
-  font-size: 15px;
-  font-family: 'Times New Roman', Times, serif;
+  font-size: 12px;
   padding-left: 4px;
+  height: 3rem;
+  padding-top: 15px;
 }
 
 #scores:nth-child(even) {
-  background-color: #ddd;
+  background-color: rgb(31, 34, 37);
   width: 100%;
 }
 
@@ -83,7 +103,18 @@ table {
 }
 
 #sub {
-  width: 5rem;
-  margin-left: 90px;
-  border: 2px solid black;
+  width: 7rem;
+  margin-left: 92px;
+  border: 4px solid rgb(233, 226, 226);
+  background-color: #000;
+  color: #ddd;
+  border-radius: 3px;
+  height: 4rem;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#sub:hover {
+  background-color: #ddd;
+  color: #000;
 }
